# optimagic

./: .appveyor.yml  .azure-pipelines.yml  .codecov.yml  .coveragerc  .envrc  .gitignore  .pre-commit-config.yaml  .pytask.sqlite3  .readthedocs.yml  .travis.yml  .yamllint.yml  CHANGES.md  CHANGES.rst  CITATION  CLEANUP_NOTES.MD  CODE_OF_CONDUCT.md  CONSTRAINTS_REFACTOR_REVIEW.md  LICENSE  MANIFEST.in  README.md  README.rst  REPORT.md  Untitled.ipynb  codecov.yml  conda_build_config.yaml  environment.yml  environment.yml.orig  meta.yaml  meta.yaml.orig  pyproject.toml  pytask.ini  readthedocs.yml  release.py  setup.cfg  setup.py  test-richardson.py  test.py  testing.ipynb  tox.ini  tox.ini.orig
.conda/: meta.yaml
.envs/: testenv-linkcheck.yml  testenv-linux.yml  testenv-others.yml  testenv-pandas.yml  update_envs.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  descri.md  enhancement.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: add_feature.md  pull_request_template.md
.github/workflows/: continuous-integration-workflow.yml  main.yml  mamba.yml  publish-to-pypi.yml
.scripts/: update-name-in-pyproject.py
.tools/: check_mypy_versions.py  create_algo_selection_code.py  create_and_format_algo_selection_code.sh  test_create_algo_selection_code.py  update_algo_selection_hook.py  update_envs.py  update_init_files.py  update_name_pyproject.py
.tools/envs/: testenv-linux-py313.yml  testenv-linux.yml  testenv-nevergrad.yml  testenv-numpy.yml  testenv-others-py313.yml  testenv-others.yml  testenv-pandas.yml  testenv-plotly.yml
docs/: .pytask.sqlite3  Makefile  environment.yml  make.bat  rtd_environment.yml
docs/scripts/: .pytask.sqlite3  README.md  task_generate_optimizer_illustration_gifs.py
docs/source/: _algorithms_old.md  algorithms.md  algorithms.rst  conf.py  contributing.rst  credits.rst  dashboard.rst  differentiation.rst  estimation.rst  example_notebooks.rst  faq.rst  how-to-maintain.rst  index.md  index.rst  inference.rst  installation.md  installation.rst  introduction.rst  model_tools.rst  module_reference.rst  optimize.rst  refs.bib  rtd_environment.yml  videos.md  visualization.rst
estimagic/: __init__.py  batch_evaluators.py  cli.py  config.py  decorators.py  exceptions.py  parameter_handling.py
estimagic/dashboard/: callbacks.py  convergence_plot.py  convergence_tab.py  create_short_database_names.py  dashboard.py  index.html  master_app.py  monitoring_app.py  monitoring_callbacks.py  mwe.py  plot_functions.py  plotting_functions.py  run_dashboard.py  server_functions.py  setup_dashboard.py  styles.css  update_data_from_database.py  utilities.py
estimagic/dashboard_old/: convergence_tab.py  dashboard.py  plotting_functions.py  server_functions.py
estimagic/differentiation/: derivatives.py  diff_auxiliary.py  differentiation.py  differentiation_auxiliary.py  finite_differences.py  first_order_auxiliary.py  generate_steps.py  gradient.py  hessian.py  jacobian.py  numdiff_np.py  richardson_extrapolation.py  second_order_auxiliary.py  test-richardson.py
estimagic/estimation/: estimate.py  estimate_ml.py  estimate_msm.py  msm_weighting.py  weighting_matrix.py
estimagic/estimation_table/: estimation_table.py
estimagic/examples/: criterion_functions.py  criterion_functions_optimization_tests.py  diabetes.csv  logit.py  numdiff_example_functions_np.py
estimagic/inference/: bootstrap.py  bootstrap_ci.py  bootstrap_estimates.py  bootstrap_helpers.py  bootstrap_outcomes.py  bootstrap_samples.py  likelihood_covs.py  likelihood_inference.py  ml_covs.py  moment_covs.py  msm_covs.py  sample_models.py  se_estimation.py  shared.py
estimagic/logging/: create_database.py  database_utilities.py  database_utilities_new.py  read_database.py  read_log.py  update_database.py
estimagic/optimization/: __init__.py  algo_dict.json  algo_options.py  bhhh.py  broadcast_arguments.py  check_arguments.py  check_constraints.py  consolidate_constraints.py  cyipopt_optimizers.py  default_algo_options.py  estimagic_optimizers.py  internal_criterion_template.py  kernel_transformations.py  kernel_transformations_jax.py  nag_optimizers.py  nlopt_optimizers.py  optimize.py  optimize_new.py  pounders.py  process_arguments.py  process_constraints.py  pygmo.py  pygmo_example.ipynb  pygmo_optimizers.py  reparametrize.py  reparametrize_new.py  scaling.py  scipy.py  scipy_optimizers.py  solver_pounders.py  start_helpers.py  tao_optimizers.py  tiktak.py  transform_problem.py  utilities.py
estimagic/parameters/: check_constraints.py  consolidate_constraints.py  kernel_transformations.py  parameter_conversion.py  parameter_preprocessing.py  process_constraints.py  reparametrize.py
estimagic/sandbox/: minimize_example.ipynb
estimagic/sensitivity/: moment_sensitivity.py  msm_sensitivity.py
estimagic/shared/: check_option_dicts.py
estimagic/tests/: conftest.py  test_batch_evaluators.py  test_decorators.py  test_utilities.py
estimagic/visualization/: add_histogram_columns_to_tidy_df.py  colors.py  comparison_plot.py  comparison_plot_data_preparation.py  derivative_plot.py  estimation_table.py  interactive_distribution_plot.py  interactive_distribution_plot_callbacks.py  lollipop_plot.py  parameter_distribution_plot.py  sensitivity_plot.py
src/estimagic/: __init__.py  algorithms.py  batch_evaluators.py  bootstrap.py  bootstrap_ci.py  bootstrap_helpers.py  bootstrap_outcomes.py  bootstrap_samples.py  cli.py  compat.py  config.py  decorators.py  estimate_ml.py  estimate_msm.py  estimation_table.py  exceptions.py  lollipop_plot.py  ml_covs.py  msm_covs.py  msm_sensitivity.py  msm_weighting.py  process_user_function.py  shared_covs.py  utilities.py
src/optimagic/: __init__.py  algo_selection.py  algorithms.py  batch_evaluators.py  config.py  constraints.py  decorators.py  deprecations.py  exceptions.py  mark.py  options.py  process_user_function.py  pygad.py  sandbox.py  timing.py  type_conversion.py  typing.py  (+1 more)
tests/: conftest.py  test_batch_evaluators.py  test_decorators.py  test_deprecations.py  test_process_function.py  test_utilities.py
(+1340 files in other folders)
