# ======================================================================================
# Project metadata
# ======================================================================================
[project]
name = "optimagic"
description = "Tools to solve difficult numerical optimization problems."
requires-python = ">=3.12"
dependencies = [
    "cloudpickle>=2.2",
    "joblib>=1.1",
    "numpy>=1.26",
    "pandas>=2.1",
    "plotly>=5.14",
    "pybaum>=0.1.2",
    "scipy>=1.11",
    "sqlalchemy>=2.0",
    "annotated-types>=0.4",
    "typing-extensions>=4.5",
]
dynamic = ["version"]
keywords = [
    "nonlinear optimization",
    "optimization",
    "derivative free optimization",
    "global optimization",
    "parallel optimization",
    "statistics",
    "estimation",
    "extremum estimation",
    "inference",
    "numerical differentiation",
    "finite differences",
    "method of simulated moments",
    "maximum likelihood",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
authors = [
    { name = "Janos Gabler", email = "janos.gabler@gmail.com" },
]
maintainers = [
    { name = "Janos Gabler", email = "janos.gabler@gmail.com" },
    { name = "Tim Mensinger", email = "mensingertim@gmail.com" },
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Repository = "https://github.com/optimagic-dev/optimagic"
Github = "https://github.com/optimagic-dev/optimagic"
Tracker = "https://github.com/optimagic-dev/optimagic/issues"


# ======================================================================================
# Build system configuration
# ======================================================================================
[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/optimagic/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true


# ======================================================================================
# Ruff configuration
# ======================================================================================
[tool.ruff]
target-version = "py312"
fix = true

[tool.ruff.lint]
select = [
  # isort
  "I",
  # pyflakes
  "F",
  # pycodestyle
  "E",
  "W",
  # flake8-2020
  "YTT",
  # flake8-bugbear
  "B",
  # flake8-quotes
  "Q",
  # pylint
  "PLE", "PLR", "PLW",
  # misc lints
  "PIE",
  # tidy imports
  "TID",
  # implicit string concatenation
  "ISC",
  # pydocstyle
  "D",
]

extend-ignore = [

  # Missing docstrings — not enforced for now
  "D100",  # public module
  "D101",  # public class
  "D102",  # public method
  "D103",  # public function
  "D104",  # public package
  "D105",  # magic method
  "D107",  # __init__
  # Docstring content/style rules — too noisy to enforce for now
  "D205",  # blank line between summary and description
  "D414",  # section has no body
  "D415",  # first line punctuation
  "D417",  # missing argument descriptions
  # allow module import not at top of file, important for notebooks
  "E402",
  # do not assign a lambda expression, use a def
  "E731",
  # Too many arguments to function call
  "PLR0913",
  # Too many returns
  "PLR0911",
  # Too many branches
  "PLR0912",
  # Too many statements
  "PLR0915",
  # Magic number
  "PLR2004",
  # Consider `elif` instead of `else` then `if` to remove indentation level
  "PLR5501",
  # For calls to warnings.warn(): No explicit `stacklevel` keyword argument found
  "B028",
  # Incompatible with formatting
  "ISC001",
]

[tool.ruff.lint.per-file-ignores]
"docs/source/conf.py" = ["E501", "ERA001", "DTZ005"]
"src/optimagic/parameters/kernel_transformations.py" = ["ARG001", "N806"]
"docs/source/*" = ["B018"]
"src/optimagic/algorithms.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"


# ======================================================================================
# Pytest configuration
# ======================================================================================
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using or importing the ABCs from 'collections'",
    "ignore:the imp module is deprecated",
    "ignore:Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.",
    "ignore:In a future version of pandas all arguments of concat except for the argument 'objs' will be keyword-only",
    "ignore:Please use `MemoizeJac` from the `scipy.optimize` namespace",
    "ignore:`scipy.optimize.optimize.MemoizeJac` is deprecated",
    "ignore:Some algorithms did not converge. Their walltime has been set to a very high value instead of infinity because Timedeltas do notsupport infinite values",
    "ignore:In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences",
    "ignore:distutils Version classes are deprecated. Use packaging.version instead",
    "ignore:Standard matrix inversion failed due to LinAlgError",
    "ignore:delta_grad == 0.0",
    "ignore:Widget._active_widgets is deprecated",
    "ignore:Widget._widget_types is deprecated",
    "ignore:Widget.widget_types is deprecated",
    "ignore:Widget.widgets is deprecated",
    "ignore:Parallelization together with",
    "ignore:Conversion of an array with ndim > 0 to a scalar is deprecated",
    "ignore:The following exception was caught when evaluating",
    "ignore:The following exception was caught when calculating",
    "ignore:Usage of the parameter log_options",
]
addopts = ["--doctest-modules", "--pdbcls=pdbp:Pdb"]
markers = [
    "wip: Tests that are work-in-progress.",
    "slow: Tests that take a long time to run and are skipped in continuous integration.",
    "jax: Tests that require jax to be installed and are skipped on non-Linux systems.",
]
norecursedirs = ["docs", ".tools"]


# ======================================================================================
# Misc configuration
# ======================================================================================
[tool.yamlfix]
line_length = 88
sequence_style = "block_style"
none_representation = "null"


# ======================================================================================
# Mypy configuration
# ======================================================================================
[tool.mypy]
files = ["src", "tests", ".tools"]
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "optimagic.benchmarking",
    "optimagic.benchmarking.benchmark_reports",
    "optimagic.benchmarking.cartis_roberts",
    "optimagic.benchmarking.get_benchmark_problems",
    "optimagic.benchmarking.more_wild",
    "optimagic.benchmarking.noise_distributions",
    "optimagic.benchmarking.process_benchmark_results",
    "optimagic.benchmarking.run_benchmark",

    "optimagic.differentiation",
    "optimagic.differentiation.derivatives",
    "optimagic.differentiation.finite_differences",
    "optimagic.differentiation.generate_steps",
    "optimagic.differentiation.richardson_extrapolation",

    "optimagic.examples",
    "optimagic.examples.numdiff_functions",

    "optimagic.optimization",
    "optimagic.optimization.algo_options",
    "optimagic.optimization.convergence_report",
    "optimagic.optimization.optimization_logging",
    "optimagic.optimization.optimize_result",
    "optimagic.optimization.optimize",
    "optimagic.optimization.multistart",
    "optimagic.optimization.scipy_aliases",
    "optimagic.optimization.create_optimization_problem",

    "optimagic.optimizers._pounders",
    "optimagic.optimizers._pounders.pounders_auxiliary",
    "optimagic.optimizers._pounders.pounders_history",
    "optimagic.optimizers._pounders._conjugate_gradient",
    "optimagic.optimizers._pounders._steihaug_toint",
    "optimagic.optimizers._pounders._trsbox",
    "optimagic.optimizers._pounders.bntr",
    "optimagic.optimizers._pounders.gqtpar",
    "optimagic.optimizers._pounders.linear_subsolvers",

    "optimagic.optimizers",
    "optimagic.optimizers.tranquilo",
    "optimagic.optimizers.pygmo_optimizers",
    "optimagic.optimizers.scipy_optimizers",
    "optimagic.optimizers.nag_optimizers",
    "optimagic.optimizers.neldermead",
    "optimagic.optimizers.nlopt_optimizers",
    "optimagic.optimizers.ipopt",
    "optimagic.optimizers.fides",
    "optimagic.optimizers.pounders",
    "optimagic.optimizers.tao_optimizers",


    "optimagic.parameters",
    "optimagic.parameters.block_trees",
    "optimagic.parameters.check_constraints",
    "optimagic.parameters.consolidate_constraints",
    "optimagic.parameters.constraint_tools",
    "optimagic.parameters.conversion",
    "optimagic.parameters.kernel_transformations",
    "optimagic.parameters.nonlinear_constraints",
    "optimagic.parameters.process_constraints",
    "optimagic.parameters.process_selectors",
    "optimagic.parameters.space_conversion",
    "optimagic.parameters.tree_conversion",
    "optimagic.parameters.tree_registry",


    "optimagic.shared",
    "optimagic.shared.check_option_dicts",
    "optimagic.shared.compat",
    "optimagic.shared.process_user_function",

    "optimagic.visualization",
    "optimagic.visualization.convergence_plot",
    "optimagic.visualization.backends",
    "optimagic.visualization.deviation_plot",
    "optimagic.visualization.history_plots",
    "optimagic.visualization.plotting_utilities",
    "optimagic.visualization.profile_plot",
    "optimagic.visualization.slice_plot",

    "optimagic",
    "optimagic.decorators",
    "optimagic.exceptions",
    "optimagic.utilities",
    "optimagic.deprecations",

    "estimagic",
    "estimagic.examples",
    "estimagic.examples.logit",
    "estimagic.estimate_ml",
    "estimagic.estimate_msm",
    "estimagic.estimation_summaries",
    "estimagic.msm_weighting",
    "estimagic.bootstrap_ci",
    "estimagic.bootstrap_helpers",
    "estimagic.bootstrap_outcomes",
    "estimagic.bootstrap_samples",
    "estimagic.bootstrap",
    "estimagic.ml_covs",
    "estimagic.msm_covs",
    "estimagic.shared_covs",
    "estimagic.msm_sensitivity",
    "estimagic.estimation_table",
    "estimagic.lollipop_plot",

]
check_untyped_defs = false
disallow_any_generics = false
disallow_untyped_defs = false


[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "pybaum",
    "scipy",
    "scipy.linalg",
    "scipy.linalg.lapack",
    "scipy.stats",
    "scipy.optimize",
    "scipy.ndimage",
    "scipy.optimize._trustregion_exact",
    "plotly",
    "plotly.graph_objects",
    "plotly.express",
    "plotly.subplots",
    "matplotlib",
    "matplotlib.pyplot",
    "cyipopt",
    "nlopt",
    "bokeh",
    "bokeh.layouts",
    "bokeh.models",
    "bokeh.plotting",
    "bokeh.application",
    "bokeh.application.handlers",
    "bokeh.application.handlers.function",
    "bokeh.server",
    "bokeh.server.server",
    "bokeh.command",
    "bokeh.command.util",
    "fides",
    "petsc4py",
    "petsc4py.PETSc",
    "tranquilo",
    "tranquilo.tranquilo",
    "tranquilo.options",
    "tranquilo.process_arguments",
    "dfols",
    "pybobyqa",
    "pygmo",
    "jax",
    "joblib",
    "cloudpickle",
    "numba",
    "pathos",
    "pathos.pools",
    "optimagic._version",
    "annotated_types",
    "pdbp",
    "iminuit",
    "nevergrad",
    "nevergrad.optimization.base",
    "pygad",
    "pyswarms",
    "pyswarms.backend.topology",
    "yaml",
    "gradient_free_optimizers",
    "gradient_free_optimizers.optimizers.base_optimizer",
  ]
ignore_missing_imports = true


# ======================================================================================
# Pixi configuration
# ======================================================================================
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

# --- Base dependencies (all environments) -------------------------------------------
[tool.pixi.dependencies]
python = ">=3.12,<3.15"
# Prefer conda-forge builds for compiled scientific packages
numpy = ">=2.0.0"
scipy = ">=1.11"
pandas = ">=2.1,<3"
jupyterlab = ">=4.0"
cyipopt = ">=1.4.0"
pygmo = ">=2.19.0"
nlopt = ">=2.7"
statsmodels = ">=0.14"
matplotlib = ">=3.8"
bokeh = ">=3.2"
altair = ">=5.1"
seaborn = ">=0.13"
pyyaml = ">=6.0.1"
jinja2 = ">=3.1"
tranquilo = ">=0.1.1"
iminuit = ">=2.25"
cma = ">=3.3"
pygad = ">=3.2"
pytorch-cpu = ">=2.2"
ruff = ">=0.15.5,<0.16"

[tool.pixi.pypi-dependencies]
optimagic = { path = ".", editable = true }
pdbp = "*"
bayesian-optimization = ">=1.4"
dfo-ls = ">=1.5.3"
py-bobyqa = ">=1.3"
fides = "==0.7.4"
kaleido = ">=0.2.1"
gradient-free-optimizers = ">=1.6.0"
pyswarms = ">=1.3"

# --- Python version features --------------------------------------------------------
[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"
[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"
[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"

# --- Feature: tests (test infrastructure) --------------------------------------------
[tool.pixi.feature.tests.dependencies]
pytest = ">=7.2"
pytest-cov = ">=4.0"
pytest-xdist = ">=3.2"

[tool.pixi.feature.tests.tasks]
tests = { cmd = "pytest", description = "Run the full test suite" }
tests-fast = { cmd = "pytest -m 'not slow and not jax'", description = "Run tests excluding slow and jax tests" }
tests-with-cov = { cmd = "pytest --cov-report=xml --cov=src", description = "Run tests with XML coverage report" }

# --- Feature: type-checking (mypy + type stubs) --------------------------------------
[tool.pixi.feature.type-checking.dependencies]
mypy = "==1.19.1"

[tool.pixi.feature.type-checking.pypi-dependencies]
pandas-stubs = "*"
types-cffi = "*"
types-openpyxl = "*"
types-jinja2 = "*"
sqlalchemy-stubs = "*"

[tool.pixi.feature.type-checking.tasks]
mypy = { cmd = "mypy", description = "Run mypy type checker" }

# --- Feature: linux (Linux-only deps) ------------------------------------------------
[tool.pixi.feature.linux]
platforms = ["linux-64"]
[tool.pixi.feature.linux.dependencies]
jax = ">=0.4.8"
petsc4py = ">=3.18"

# --- Feature: docs -------------------------------------------------------------------
[tool.pixi.feature.docs.dependencies]
sphinx = ">=8.2.3"
sphinxcontrib-bibtex = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
sphinx-llm = "*"
sphinx-llms-txt = "*"
ipython = "*"
ipython_genutils = "*"
myst-nb = "*"
furo = "*"
anywidget = "*"
patsy = "*"

[tool.pixi.feature.docs.pypi-dependencies]
sphinxcontrib-mermaid = "*"
intersphinx-registry = "*"

[tool.pixi.feature.docs.tasks]
build-docs = { cmd = "make html", cwd = "docs", description = "Build the HTML documentation" }

# --- Compat features (version overrides for backward-compat CI) ---------------------
[tool.pixi.feature.old-plotly.dependencies]
plotly = "<6"

[tool.pixi.feature.old-plotly.pypi-dependencies]
kaleido = "<0.3"

[tool.pixi.feature.nevergrad.pypi-dependencies]
bayesian-optimization = "==1.4.0"
nevergrad = "*"

# --- Environments --------------------------------------------------------------------
[tool.pixi.environments]
# Default dev environment (Python 3.14, everything)
default = { features = ["tests", "py314"], solve-group = "py314" }
# Linux CI (with JAX + PETSc)
tests-linux-py312 = { features = ["tests", "linux", "py312"], solve-group = "linux-py312" }
tests-linux-py313 = { features = ["tests", "linux", "py313"], solve-group = "linux-py313" }
tests-linux-py314 = { features = ["tests", "linux", "py314"], solve-group = "linux-py314" }
# macOS/Windows CI
tests-py312 = { features = ["tests", "py312"], solve-group = "py312" }
tests-py313 = { features = ["tests", "py313"], solve-group = "py313" }
tests-py314 = { features = ["tests", "py314"], solve-group = "py314" }
# Backward-compat CI (Python 3.12, lowest supported)
tests-old-plotly = { features = ["tests", "old-plotly", "py312"] }
# Nevergrad CI (bayesian-optimization==1.4.0)
tests-nevergrad-py312 = { features = ["tests", "nevergrad", "py312"] }
tests-nevergrad-py313 = { features = ["tests", "nevergrad", "py313"] }
tests-nevergrad-py314 = { features = ["tests", "nevergrad", "py314"] }
# Type checking
type-checking = { features = ["type-checking", "py314"], solve-group = "py314" }
# Docs
docs = { features = ["docs", "py314"], solve-group = "py314" }
